--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div data-ng-controller="MenuCtrl">
         <button data-ng-click="goToLearnFretboard()">Learn Fret Board</button>
         <button data-ng-click="goToNameThatFret()">Name that Fret</button>
+        <button data-ng-click="goToMetronome()">Metronome</button>
     </div>
     <data-ng-view></data-ng-view>
 
@@ -22,5 +23,6 @@
     <script src="js/controllers/LearnFretboardCtrl.js"></script>
     <script src="js/controllers/NameThatFretCtrl.js"></script>
     <script src="js/controllers/MenuCtrl.js"></script>
+    <script src="js/controllers/MetronomeCtrl.js"></script>
 </body>
 </html>
